tests/errors/type_check_operation.err
Type Error: Binary operations only accept `int`, but found `list<char>`
1: print("asd" + 1)
         ^
